fix : AOS add overflow-x hidden

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9,6 +9,7 @@
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 :root {
   --primary: #7a231d;
